<resources>
    <string name="app_name">AndroidAirline</string>
    <string name="airline_app">Airline App</string>
    <string name="help">Help</string>
    <string name="helptext">This is an android app used to hold airline and flight information.
        \n\nAirlines are listed on the home screen, and when clicked the flights associated to that
        airline are listed.
        \n\nA new airline can be created on the home screen, and new flights can
        be created for an airline after clicking on one.</string>
    <string name="add_flight">Add Flight</string>
    <string name="add_new_flight">Submit New Flight to Airline</string>
    <string name="flight_number">Flight Number:</string>
    <string name="_123">123</string>
    <string name="add_airline">Add New Airline</string>
    <string name="textview">TextView</string>
    <string name="airline_name">Airline Name:</string>
    <string name="flights_list">Flights List</string>
    <string name="depart_date">Depart Date</string>
    <string name="depart_time">Depart Time</string>
    <string name="arrive_date">Arrive Date</string>
    <string name="submit_new_flight">Submit New Flight</string>
    <string name="arrive_time">Arrive Time</string>
    <string name="search_airline">Search Airline</string>
    <string name="destination_airport">Destination Airport</string>
    <string name="source_airport">Source Airport</string>
    <string name="airline">Airline</string>
    <string name="clear_data">Clear All Data</string>
</resources>
